--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,14 +5,30 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.shinji.tessellation.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/linearLayout1"
         android:layout_height="wrap_content"
-        android:text="Tessellation!"/>
+        android:layout_width="wrap_content"
+        android:orientation="vertical"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true">
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="平面充填"
+            android:layout_above="@+id/linearLayout1"
+            android:layout_marginBottom="10dp">
+        </TextView>
+        <Button
+            android:id="@+id/game_start"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:text="ゲーム開始">
+        </Button>
+    </LinearLayout>
+
 </RelativeLayout>
