--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="平面充填"
+            android:text="Tessellation"
             android:layout_above="@+id/linearLayout1"
             android:layout_marginBottom="10dp">
         </TextView>
